--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -9,25 +9,225 @@
 <body>
   <main>
     <div class="wrapper">
+
       <div class="category">
 
-        <div class="blok-category">Category</div>
+        <div class="blok-category-brand">Category</div>
 
-        <div class="blok-cat">
-
-          <div class="blok-kvad">
-            <div><i class="bi bi-check2"></i></div>
-          </div>
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
           <div class="blok-text">
             <li>
               <a href="#" data-element="page-link"
               class="none-style text-color">Monitors</a>
             </li>
           </div>
+        </div>
 
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">LapTops</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Video cards</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Gaming keyboards</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Computer mouse</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">SSD</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Sound cards</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">RAM</a>
+            </li>
+          </div>
         </div>
 
       </div>
+
+
+
+
+
+      <div class="brand">
+        <div class="blok-category-brand strip">Brand</div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Asus</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Acer</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Apple</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Dell</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Dynamode</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Gigabyte</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Kingston</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Lenovo</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Logitech</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">MSI</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">BenQ</a>
+            </li>
+          </div>
+        </div>
+
+        <div class="blok-cat-br">
+          <div class="blok-kvad"><i class="bi bi-check2"></i></div>
+          <div class="blok-text">
+            <li>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">A4Tech</a>
+            </li>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
 
     </div>
   </main>
