--- a/grid/style.css
+++ b/grid/style.css
@@ -5,18 +5,13 @@
     padding-right: 15px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
   
 .row {
     width: 100%;
     display: flex;
     flex-direction: row;
-}
-
-div[class^='col-'] {
-    outline: 1px solid red;
-    background: lightgray;
-    text-align: center;
 }
 
 .col-left-side {
@@ -27,6 +22,12 @@ div[class^='col-'] {
     width: 70%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: flex-start;
+}
+
+.right-head {
+    height: 45px;
 }
 
 .col-1 {
@@ -109,7 +110,7 @@ div[class^='col-'] {
     }
     
     .col-s-6 {
-        width: calc(100% / 12 * 6);
+        width: calc(100% / 12 * 5.83);
     }
     
     .col-s-7 {
@@ -151,7 +152,7 @@ div[class^='col-'] {
     }
     
     .col-m-4 {
-        width: calc(100% / 12 * 4);
+        width: calc(100% / 12 * 3.83);
     }
     
     .col-m-5 {
@@ -159,7 +160,7 @@ div[class^='col-'] {
     }
     
     .col-m-6 {
-        width: calc(100% / 12 * 6);
+        width: calc(100% / 12 * 5.83);
     }
     
     .col-m-7 {
@@ -167,7 +168,7 @@ div[class^='col-'] {
     }
     
     .col-m-8 {
-        width: calc(100% / 12 * 8);
+        width: calc(100% / 12 * 7.83);
     }
     
     .col-m-9 {
@@ -247,11 +248,11 @@ div[class^='col-'] {
     }
     
     .col-xl-3 {
-        width: calc(100% / 12 * 3);
+        width: calc(100% / 12 * 2.83);
     }
     
     .col-xl-4 {
-        width: calc(100% / 12 * 4);
+        width: calc(100% / 12 * 3.83);
     }
     
     .col-xl-5 {
@@ -267,11 +268,11 @@ div[class^='col-'] {
     }
     
     .col-xl-8 {
-        width: calc(100% / 12 * 8);
+        width: calc(100% / 12 * 7.83);
     }
     
     .col-xl-9 {
-        width: calc(100% / 12 * 9);
+        width: calc(100% / 12 * 8.83);
     }
     
     .col-xl-10 {
