--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -32,7 +32,7 @@
 
 .item {
   display: flex;
-  height: 200px;
+  height: 180px;
   justify-content: center;
   margin: 12px 12px 0;
   background-repeat: no-repeat;
@@ -41,7 +41,7 @@
 }
 
 .item-content {
-  padding: 22px 24px;
+  padding: 20px 24px;
   padding-bottom: 0;
 }
 
@@ -97,4 +97,40 @@
   background-color: #7E72F2;
   text-transform: uppercase;
   justify-content: flex-end;
+  cursor: pointer;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 20px;
+}
+
+.cart {
+  height: 36px;
+  min-width: 120px;
+  border: none;
+  color: white;
+  text-align: center;
+  align-items: flex-start;
+  border-radius: 8px;
+  background-color: #7E72F2;
+  text-transform: uppercase;
+  box-shadow: 0px 2px 8px rgba(0 0 0 / 14%);
+  cursor: pointer;
+  font-family: 'Montserrat';
+  font-size: .875rem;
+  font-weight: 400;
+}
+
+.site-name {
+  color: #7e72f2;
+  display: inline-block;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
