added-allCss-parts

--- a/src/components/card(done)/02-js-task/index.html
+++ b/src/components/card(done)/02-js-task/index.html
@@ -5,7 +5,10 @@
   <title>Card component</title>
   <link rel="stylesheet" href="./style-pagination.css">
   <link rel="stylesheet" href="./style-CardList.css">
-  <link rel="stylesheet" href="./Search-box-style.css">
+  <link rel="stylesheet" href="./style-SearchBox.css">
+  <link rel="stylesheet" href="./style-SideBar.css">
+  <link rel="stylesheet" href="./Grid-style.css">
+  <link rel="stylesheet" href="./style-title.css">
 </head>
 
 <body>
