--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SideBar component</title>
+  <title>Title Component</title>
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -14,8 +14,9 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- SideBar component -->
+  <div class="TitleAndCard-wrapper">
+    <div class="OS-title"><h1>Online Store</h1></div>
+    <div class="Card-Backet"><button><i class="bi bi-cart"></i>CART</button></div>
   </div>
 </main>
 </body>
