--- a/src/components/card(done)/01-css-task/style-card.css
+++ b/src/components/card(done)/01-css-task/style-card.css
@@ -54,14 +54,14 @@ body{
   margin-left: 24px; ;
 }
 .Card-wrapper-add-to-card{
+  width: 100px;
 display: flex;
 justify-content: center;
 font-family: 'Montserrat';
 color:#FFFFFF;
 background-color:#7E72F2;
 padding: 10px;
-border-bottom-left-radius: 8px;
-border-bottom-right-radius: 8px;
+border-radius: 15px;
 }
 
 
