--- a/src/components/card(done)/02-js-task/style-SearchBox.css
+++ b/src/components/card(done)/02-js-task/style-SearchBox.css
@@ -1,14 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-*{
-  margin: 0;
-  padding: 0;
-}
+
 .Search-box{
-  width: 400px;
-  height: 25px;
+  width: 100%;
+  height: 40px;
 position: relative;
-margin: 10px 10px;
 }
 .Input-text{
   padding: 2px 5px;
@@ -21,8 +17,8 @@ margin: 10px 10px;
   outline: none;
 }
 .Search-icon{
-  margin-left: 380px;
-  margin-top: 4px;
+  margin-left: 97%;
+  margin-top: 10px;
   padding: 2px 5px;
   color: gray;
   position: absolute;
