simple lesson chekbox

--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -6,15 +6,24 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .wrapper {
-      width: 400px;
+    /* .wrapper {
+      width: 280px;
       margin: 100px auto;
-    }
+    } */
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
+    <div class="os-sidebar-header">Price</div>
+    <div>
+      <!-- Double slider here -->SideBar
+    </div>
+    <div class="os-sidebar-header">Category</div>
+    <div class="os-sidebar-chekbox">
+      <label><input type="checkbox" id="one" onchange="chekboxChange()"> Пример checkbox</label>
+    </div>
+
     <!-- SideBar component -->
   </div>
 </main>
