--- a/src/components/side-bar/01-css-task/style.css
+++ b/src/components/side-bar/01-css-task/style.css
@@ -1,1 +1,82 @@
-/* put your styles in this file */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+body {
+  background-color: rgb(244,244,244 );
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 280px;
+  margin: 0 auto;
+  /* padding: 0px 15px; */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px black;
+}
+
+
+:root {
+  --bg-main: #ffffff;
+  --main-color: #7e72f2;
+  --active-color: #5c4eda;
+  --element-bg-color: #ededed;
+  --text-main-color: #2c2c2c;
+  --text-active-color: #ffffff;
+}
+
+.os-sidebar-header {
+  font-size: 1.2rem;
+  color: var(--text-main-color);
+  font-weight: bold;
+
+}
+.os-sidebar-chekbox {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.os-sidebar-custom-chekbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.os-sidebar-custom-chekbox+label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  cursor: pointer;
+  padding: 4px;
+}
+.os-sidebar-custom-chekbox+label::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid var(--text-main-color);
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.os-sidebar-custom-chekbox:checked+label::before {
+  border-color: var(--main-color);
+  background-color: var(--main-color);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+/* стили при наведении курсора на checkbox */
+..os-sidebar-custom-chekbox:not(:disabled):not(:checked)+label:hover::before {
+  border-color:var(--active-color);
+}
+
+.os-sidebar-custom-chekbox:disabled+label::before {
+  background-color: #e9ecef;
+}
