--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -294,7 +294,7 @@ body {
 }
 
 .logo {
-  font-size: 35px;
+  font-size: 34px;
   font-weight: 600;
   color: #7E72F2;
 }
@@ -399,10 +399,14 @@ body {
   align-items: center;
   margin: 0;
   width: auto;
-  padding: 10px 34px;
+  padding: 10px 28px;
   border-radius: 3px;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 300;
+}
+
+.button_header span {
+  margin-left: 3px;
 }
 
 .button_filters {
