--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -45,6 +45,20 @@
   cursor: pointer;
 }
 
+
+
+
+
+.tren{
+  font-size: 17px;
+}
+.bloc{
+  outline: 1px solid black;
+  width: 150px;
+  height: 50px;
+}
+
+
   </style>
 </head>
 <body>
@@ -72,7 +86,7 @@
 
   <!-- checkbox создает выбор в прямоугольнике с галочкой (обязательно или один или другой) -->
   <!-- <div>
-    <p><input type="checkbox" name="мороженое" value="стаканчик">В стаканчике</p>
+    <p class="tren"><input type="checkbox" name="мороженое" value="стаканчик">В стаканчике</p>
     <p><input type="checkbox" name="мороженое" value="палочка">На палочке</p>
   </div> -->
 
@@ -82,7 +96,9 @@
     <input type="file" name="фото">
   </div> -->
 
-
+  <div class="bloc">
+    <p class="tren"><input type="checkbox" name="мороженое" value="стаканчик"><a href="#" data-element="page-link">В стаканчике</a></p>
+  </div>
 
 
 
