--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,10 +19,14 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.card-list__wrapper .container {
-  margin-top: 2px;
-}
-
 .container {
   margin-top: 20px;
+}
+
+.row {
+  margin-top: 20px;
+}
+
+.card-list__wrapper .container {
+  margin-top: 2px;
 }
