--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -5,6 +5,8 @@
   <title>SideBar component</title>
   <link rel="stylesheet" href="style.css">
 
+  <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
+
   <style>
     /* .wrapper {
       width: 400px;
@@ -64,7 +66,13 @@
 <body>
 
 
+  <input data-role="doubleslider"
+    data-min="-40" data-max="40"
+    onchange="$('#slider-return-value').val(this.value)">
 
+<input type="text" id="slider-return-value">
+
+  <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
 
 
 
@@ -96,9 +104,7 @@
     <input type="file" name="фото">
   </div> -->
 
-  <div class="bloc">
-    <p class="tren"><input type="checkbox" name="мороженое" value="стаканчик"><a href="#" data-element="page-link">В стаканчике</a></p>
-  </div>
+
 
 
 
@@ -115,7 +121,7 @@
 
 
 
-<h1>Custom Range Slider</h1>
+<!-- <h1>Custom Range Slider</h1>
 
 <div class="slidecontainer">
 
@@ -127,7 +133,18 @@
   <p>Custom range slider:</p>
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
 
-</div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
 
 
 
