--- a/src/sass/blocks/_cart.scss
+++ b/src/sass/blocks/_cart.scss
@@ -7,6 +7,10 @@
   background-color: rgba($color: #000, $alpha: .18);
 }
 
+.hidden {
+  display: none;
+}
+
 .cart {
   position: absolute;
   top: 50%;
