--- a/src/components/double-slider/02-js-task/index_vl.html
+++ b/src/components/double-slider/02-js-task/index_vl.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>[Component] component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
-  <!-- <link rel="stylesheet" href="style_vl.css"> -->
+  <!-- <link rel="stylesheet" href="../../../styles/style.min.css"> -->
+  <link rel="stylesheet" href="style_vl.css">
 
   <style>
     .wrapper {
