--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
+  <link rel="stylesheet" href="../../search-box/01-css-task/style.css">
+  <link rel="stylesheet" href="../../filters-list/01-css-task/style.css">
+  <link rel="stylesheet" href="../../double-slider/01-css-task/style.css">
+  <link rel="stylesheet" href="../../side-bar/01-css-task/style.css">
+  <link rel="stylesheet" href="../../cart/01-css-task/style.css">
   <link rel="stylesheet" href="../01-css-task/style.css">
+
 
   <style>
     
@@ -15,21 +21,20 @@
 </head>
 
 <body>
-  <div id="root" class="wrapper"></div>
+  <div id="root" class="container"></div>
 
   <script type="module">
-    // import {products} from './products.js';
-    
+      
     import OnlineStorePage from "./index.js";
 
-    fetch('https://online-store.bootcamp.place/api/products')
-      .then(response => response.json())
-      .then(products =>{
-         const page = new OnlineStorePage(products);
+    // fetch('https://online-store.bootcamp.place/api/products?_page=1&_limit=12')
+    //   .then(response => response.json())
+    //   .then(products =>{
+         const page = new OnlineStorePage();
          const root = document.querySelector('#root');
     
     root.append(page.element);
-      });
+      // });
 
    
 
